--- a/app/src/main/res/drawable/ic_place_18dp.xml
+++ b/app/src/main/res/drawable/ic_place_18dp.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="18dp"
         android:height="18dp"
+        android:tint="?colorControlNormal"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
