--- a/app/src/main/res/layout/recyclerview.xml
+++ b/app/src/main/res/layout/recyclerview.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        app:fastScrollEnabled="true"
-        app:fastScrollHorizontalThumbDrawable="@drawable/fastscroll_thumb_material"
-        app:fastScrollHorizontalTrackDrawable="@drawable/fastscroll_track_material"
-        app:fastScrollVerticalThumbDrawable="@drawable/fastscroll_thumb_material"
-        app:fastScrollVerticalTrackDrawable="@drawable/fastscroll_track_material" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@android:id/empty"
