--- a/app/src/main/res/layout/recyclerview.xml
+++ b/app/src/main/res/layout/recyclerview.xml
@@ -15,7 +15,7 @@
         android:gravity="center"
         android:padding="16dp" />
 
-    <be.digitalia.fosdem.widgets.ContentLoadingProgressBar
+    <ProgressBar
         android:id="@android:id/progress"
         style="?android:progressBarStyleLarge"
         android:layout_width="wrap_content"
