upgrade to Kotlin 1.4.10 + new versions of AppCompat & Material Components + add workaround for FAB tinting on API < 21

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,7 @@
         <item name="android:enabled">false</item>
         <item name="fabSize">normal</item>
         <item name="srcCompat">@drawable/asld_bookmark_24dp</item>
+        <item name="tint">?attr/colorOnSecondary</item><!-- Workaround for bug on API < 21 -->
     </style>
 
     <style name="SeparatorLine">
