--- a/app/src/main/res/layout/item_schedule_event.xml
+++ b/app/src/main/res/layout/item_schedule_event.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -39,6 +40,7 @@
         android:textAlignment="viewStart"
         android:textAppearance="?textAppearanceHeadline6"
         android:textSize="18sp"
+        app:drawableTint="?colorControlNormal"
         tools:text="Welcome to FOSDEM 2015" />
 
     <TextView
