--- a/app/src/main/res/layout/header_person_info.xml
+++ b/app/src/main/res/layout/header_person_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Header"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:text="@string/talks_header"/>
+    android:layout_marginTop="12dp"
+    android:text="@string/talks_header" />
