implement bookmarks parser and add file picker to send parsed bookmark ids to ExternalBookmarksActivity

--- a/app/src/main/res/menu/bookmarks.xml
+++ b/app/src/main/res/menu/bookmarks.xml
@@ -20,5 +20,11 @@
         android:title="@string/export_bookmarks"
         app:iconTint="?colorControlNormal"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/import_bookmarks"
+        android:icon="@drawable/ic_file_download_white_24dp"
+        android:title="@string/import_bookmarks"
+        app:iconTint="?colorControlNormal"
+        app:showAsAction="ifRoom" />
 
 </menu>
