--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<be.digitalia.fosdem.widgets.PhotoViewDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -33,14 +33,16 @@
 
         </LinearLayout>
 
-        <be.digitalia.fosdem.widgets.MaterialHorizontalProgressBar
+        <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginTop="-7dp"
             android:max="100"
-            android:visibility="gone"
+            android:visibility="invisible"
+            app:hideAnimationBehavior="outward"
+            app:indicatorColor="?colorSecondary"
+            app:showAnimationBehavior="inward"
             tools:visibility="visible" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
@@ -71,4 +73,4 @@
 
     </com.google.android.material.navigation.NavigationView>
 
-</be.digitalia.fosdem.widgets.PhotoViewDrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
