--- a/app/src/main/res/layout/person_info.xml
+++ b/app/src/main/res/layout/person_info.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="128dp" />
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
