use a different item view type for the event in progress in TrackScheduleAdapter this also enables a new crossfade animation

--- a/app/src/main/res/layout/item_schedule_event.xml
+++ b/app/src/main/res/layout/item_schedule_event.xml
@@ -14,7 +14,7 @@
         android:layout_alignBottom="@+id/room"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@color/schedule_time_background"
+        android:background="?colorScheduleTimeBackground"
         android:gravity="start"
         android:paddingStart="@dimen/list_item_padding"
         android:paddingTop="12dp"
@@ -22,6 +22,7 @@
         android:paddingBottom="@dimen/list_item_padding"
         android:textAlignment="viewStart"
         android:textAppearance="?textAppearanceBody2"
+        android:textColor="?colorScheduleTimeForeground"
         android:textStyle="bold"
         tools:text="09:30" />
 
