--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <attr name="colorScheduleTimeBackground" format="color" />
+    <attr name="colorScheduleTimeForeground" format="color" />
     <!-- Drawable used as a background for activated items. -->
     <attr name="activatedBackgroundIndicator" format="reference" />
     <attr name="materialHorizontalProgressBarStyle" format="reference" />
-
-    <declare-styleable name="PrimaryTextColors">
-        <attr name="android:textColorPrimary" />
-        <attr name="android:textColorPrimaryInverse" />
-    </declare-styleable>
 
     <declare-styleable name="ErrorColors">
         <attr name="colorError" />
