--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:drawablePadding="8dp"
         android:gravity="start"
         android:textAlignment="viewStart"
         android:textAppearance="?textAppearanceBody2"
