--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,9 @@
     <color name="track_type_certification_exam">#795548</color>
     <color name="track_type_certification_exam_dark">#4b2c20</color>
     <color name="track_type_certification_exam_text">@color/track_type_certification_exam</color>
+    <color name="track_type_junior">#e65100</color>
+    <color name="track_type_junior_dark">#a43a00</color>
+    <color name="track_type_junior_text">@color/track_type_junior</color>
     <color name="track_type_other">#757575</color>
     <color name="track_type_other_dark">#494949</color>
     <color name="track_type_other_text">@color/track_type_other</color>
