feat: add "submit feedback" button in event details screen

--- a/app/src/main/res/menu/event.xml
+++ b/app/src/main/res/menu/event.xml
@@ -14,5 +14,11 @@
         android:title="@string/add_to_agenda"
         app:iconTint="?colorControlNormal"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/submit_feedback"
+        android:icon="@drawable/ic_rate_review_white_24dp"
+        android:title="@string/submit_feedback"
+        app:iconTint="?colorControlNormal"
+        app:showAsAction="ifRoom" />
 
 </menu>
