--- a/app/src/main/res/layout/person_info.xml
+++ b/app/src/main/res/layout/person_info.xml
@@ -11,7 +11,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="?actionBarTheme">
 
@@ -19,12 +19,16 @@
             android:id="@+id/collapsing_toolbar"
             style="@style/Widget.App.CollapsingToolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:expandedTitleMarginBottom="40dp"
-            app:expandedTitleMarginEnd="16dp"
-            app:expandedTitleMarginStart="16dp"
+            app:expandedTitleMarginEnd="@dimen/content_margin"
+            app:expandedTitleMarginStart="@dimen/content_margin"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="144dp" />
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
