--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -2,9 +2,10 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/main_menu_header_height"
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="@dimen/main_menu_header_margin_vertical"
     android:contentDescription="@string/app_name"
-    android:padding="@dimen/main_menu_padding"
+    android:fitsSystemWindows="true"
     android:scaleType="center"
     app:srcCompat="@drawable/fosdem_title"
     app:tint="?colorOnSurface" />
