--- a/app/src/main/res/layout-sw600dp-land/track_schedule.xml
+++ b/app/src/main/res/layout-sw600dp-land/track_schedule.xml
@@ -6,19 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activities.TrackScheduleActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="128dp">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/schedule"
         android:layout_width="@dimen/schedule_column_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_marginTop="128dp" />
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        style="@style/Widget.App.Toolbar.PrimarySurface"
-        android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:gravity="top" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/event"
@@ -37,7 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/detail_fab_margin_end"
-        app:layout_anchor="@+id/toolbar"
-        app:layout_anchorGravity="bottom|end" />
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|end"
+        tools:enabled="true" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
