--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.internal.ForegroundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -44,7 +44,6 @@
         android:textAppearance="?textAppearanceSubtitle2"
         tools:text="FOSDEM Staff" />
 
-
     <TextView
         android:id="@+id/details"
         android:layout_width="match_parent"
@@ -57,4 +56,4 @@
         android:textColor="?android:textColorTertiary"
         tools:text="Saturday, 09:30 - 09:55 | Janson" />
 
-</com.google.android.material.internal.ForegroundLinearLayout>
+</LinearLayout>
