--- a/app/src/main/res/layout/person_info.xml
+++ b/app/src/main/res/layout/person_info.xml
@@ -12,8 +12,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="?actionBarTheme">
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -30,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="144dp" />
 
-            <com.google.android.material.appbar.MaterialToolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
@@ -54,7 +53,7 @@
         android:contentDescription="@string/more_info"
         android:visibility="gone"
         app:fabSize="auto"
-        app:layout_anchor="@+id/appbar"
+        app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_info_white_24dp"
         app:tint="?attr/colorOnSecondary"
