--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -19,8 +19,7 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:statusBarForeground="?colorPrimaryDark">
+            android:fitsSystemWindows="true">
 
             <FrameLayout
                 android:layout_width="match_parent"
