--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,7 @@
 
     <style name="Widget.App.AppBarLayout" parent="Widget.MaterialComponents.AppBarLayout.PrimarySurface">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.ActionBar</item>
+        <item name="statusBarForeground">?colorPrimaryDark</item>
     </style>
 
     <style name="ThemeOverlay.App.ActionBar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
