--- a/app/src/main/res/layout-sw600dp-land/track_schedule.xml
+++ b/app/src/main/res/layout-sw600dp-land/track_schedule.xml
@@ -10,13 +10,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="128dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="128dp"
+            android:gravity="start|top" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -24,8 +25,7 @@
         android:id="@+id/schedule"
         android:layout_width="@dimen/schedule_column_width"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:layout_marginTop="128dp" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/event"
